segregating RemoteSourceControl interface (#88)